fixed the stretch image

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,9 +5,7 @@
 
   .hero {
     background-image: url("https://images.unsplash.com/photo-1558051815-0f18e64e6280?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1169&q=80");
-    background-size: cover; /* cover the entire div */
-    background-position: center; /* center the image */
-    
+    object-fit: cover;
   }
   
   /* .avatar {
